--- a/test_notebooks/MCMC_test.ipynb
+++ b/test_notebooks/MCMC_test.ipynb
@@ -98,7 +98,7 @@
     {
       "cell_type": "code",
       "source": [
-        "target_structure = activestructopt.dataset.materialsproject.get_structure('mp-22526', 'JZ9TCimf5QbGZ1BbavZ3xKHrVGAZKy14')"
+        "target_structure = activestructopt.dataset.materialsproject.get_structure('mp-22526', 'YOUR_API_KEY_HERE')"
       ],
       "metadata": {
         "id": "bR_YxvovS2Q-"
